<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HealthCore</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_btn">Boton de Emergencia</string>
    <string name="menu_code">Código QR</string>
    <string name="menu_centers">Centros Médicos</string>
    <string name="menu_contact">Contacto</string>
    <string name="menu_help">Ayuda</string>
    <string name="menu_rate">Calificanos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_username">HealthCore! El nucleo de la vida</string>
    <string name="menu_email">Correo</string>
    <string name="Titulo_Codigo_QR">Código QR</string>
    <string name="Codigo_QR_Aviso">Tu código QR es personal, no lo compartas con nadie que no sea tu familia o el personal médico calificado.</string>
    <string name="txt_boton_codigo_qr">Compartir</string>
    <string name="txt_emergency_button">¡Botón de emergencia!</string>
    <string name="title_activity_contacto">Contacto</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="jesus_nombre">Jesús Rangel Díaz</string>
    <string name="jesus_correo">jesusrangeldiaz155@gmail.com</string>
    <string name="ximena_nombre">Ximena Velasco Vázquez</string>
    <string name="ximena_correo">adm15velascoximena@gmail.com</string>
    <string name="alan_nombre">Sergio Alan Salinas Rodríguez</string>
    <string name="alan_correo">alansalinas25@gmail.com</string>
    <string name="karen_nombre">Karen Jazmín Suárez Ríos</string>
    <string name="karen_correo">jazminsuari@gmail.com</string>
    <string name="valoracion_titulo">¡Valora nuestra App!</string>
    <string name="valoracion_comentario">Escribe un comentario...</string>
    <string name="btn_enviar_valoracion">ENVIAR</string>
    <string name="nombre_paciente_perfil">Cristian Salas</string>
    <string name="enfermedad_cronica_perfil">Diábetes Crónica</string>
    <string name="num_operaciones_perfil">2 Operaciones</string>
    <string name="ultima_revision_perfil">Última Revisión</string>
    <string name="hacer_pregunta">Realiza una pregunta...</string>
    <string name="btn_enviar_pregunta">ENVIAR</string>
    <string name="scan">Escanear</string>

    <string-array name="Preguntas">
        <item>¿Cómo usar la app en una situación de emergencia?</item>
        <item>¿Para qué funciona el Código QR?</item>
        <item>¿Cómo realizo mi expediente médico?</item>
        <item>¿Cómo se relaciona la app con mi centro de salud?</item>
        <item>¿Puedo consultar información con algún médico?</item>
    </string-array>
    <string-array name="Respuesta1">
        <item>Si presentas una emergencia y previamente haz llenado tu correspondiente expediente médico, solo basta con estar en pantalla de inicio, presionar el botón rojo de emergencia, verificar tu situación y automáticamente se envía una notificación al centro de salud más cercano, otorgando el servicio de ambulancia a la dirección ingresada</item>
    </string-array>
    <string-array name="Respuesta2">
        <item>El código QR permite almacenar tu información médica, en caso de que presentes un accidente, este puede ser escaneado por alguien más para brindarte servicios de forma más rápida y eficaz</item>
    </string-array>
    <string-array name="Respuesta3">
        <item>En el apartado de tu perfil, podrás modificar tu expediente contestando las preguntas disponibles</item>
    </string-array>
    <string-array name="Respuesta4">
        <item>Al presionar el botón de emergencia que tienes disponible en la app, este manda una alerta a tu centro de salud, permitiendo brindarte servicio de ambulancia para que tu caso pueda ser atendido rápidamente</item>
    </string-array>
    <string-array name="Respuesta5">
        <item>La app no está enfocada en brindarte servicio directo con algún médico en particular, sino que permite mejorar las emergencias en los centros de salud y sociedad</item>
    </string-array>
    <string name="textViewPreguntas">Preguntas más frecuentes de la app</string>
    <string name="textViewRespuestas">Respuestas</string>
    <string name="Login">Inicio de Sesión</string>
    <string name="Email">Correo electrónico</string>
    <string name="Password">Contraseña</string>
    <string name="Login2">Iniciar Sesión</string>
    <string name="Registro">No tiene una cuenta?</string>
    <string name="Registrese">Registrese</string>
    <string name="menu_sesion">Cuenta</string>
    <string name="userNombre">Cuenta</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="registro_usuario">Registro de Usuario</string>
    <string name="username">Usuario</string>
    <string name="email">Correo electrónico</string>
    <string name="registrarse">Registrarse</string>
    <string name="cuenta_existente">Ya tiene una Cuenta?</string>
    <string name="contactanos">¡CONTÁCTANOS!</string>
    <string name="redes_sociales">Visita nuestras Redes Sociales</string>
    <string name="perfil">PERFIL</string>
    <string name="datospersonales">Datos Personales</string>
    <string name="nombre">Nombre:</string>
    <string name="ingresenombre">Ingrese su nombre (s)</string>
    <string name="apepaterno">Apellido Paterno:</string>
    <string name="ingreseapepat">Ingrese su primer apellido</string>
    <string name="apemat">Apellido Materno:</string>
    <string name="ingresarapemat">Ingrese su segundo apellido</string>
    <string name="edad">Edad:</string>
    <string name="ingreedad">Ingrese su edad en número</string>
    <string name="sexo">Sexo:</string>
    <string name="ingresex">Ingrese su sexo</string>
    <string name="misalud">Mi Salud</string>
    <string name="estatura">Estatura:</string>
    <string name="inalt">Ingrese su altura en cm</string>
    <string name="peso">Peso:</string>
    <string name="ingpeso">Ingrese su peso en Kg</string>
    <string name="alergias">Alergias:</string>
    <string name="ingrealer">Ingrese las alergias que posee</string>
    <string name="tipsang">Tipo de sangre:</string>
    <string name="ingretisan">Ingrese su tipo de sangre</string>
    <string name="actubtn">ACTUALIZAR</string>
    <string name="eslogan">HealthCore! El núcleo de la Vida</string>

</resources>


