<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_profile"
            android:title="@string/menu_profile"/>
        <item android:id="@+id/nav_code"
            android:title="@string/menu_code"/>
        <item android:id="@+id/nav_centers"
            android:title="@string/menu_centers"/>
        <item android:id="@+id/nav_contact"
            android:title="@string/menu_contact"/>
        <item android:id="@+id/nav_help"
            android:title="@string/menu_help"/>
        <item android:id="@+id/nav_rate"
            android:title="@string/menu_rate"/>
    </group>

</menu>