<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#92CAE5E6"
    tools:context=".QR_Cliente">

    <ImageView
        android:id="@+id/img_qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239"
        app:srcCompat="@drawable/codigo_qr" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="167dp"
        android:layout_height="45dp"
        android:text="@string/Titulo_Codigo_QR"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/img_qr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="383dp"
        android:layout_height="86dp"
        android:layout_marginTop="16dp"
        android:text="@string/Codigo_QR_Aviso"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_qr"
        app:layout_constraintVertical_bias="0.204" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:layout_marginTop="172dp"
        android:text="@string/txt_boton_codigo_qr"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_qr"
        app:layout_constraintVertical_bias="0.222" />

    <Button
        android:id="@+id/btn_compartir1"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="64dp"
        android:layout_height="69dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#FF0000"
        android:foreground="@android:drawable/ic_menu_share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_qr"
        app:layout_constraintVertical_bias="0.577"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>